Fixed the white space glitch happening everytime we add a new private question

--- a/src/global.css
+++ b/src/global.css
@@ -2,8 +2,13 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-body{
+html, body {
   height: 100%;
+  overflow: hidden;
+}
+
+body{
+  /* height: 100%; */
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat; 
